syntax = "proto3";

package demo;

service HelloService {
    rpc SayHello (HelloRequest) returns (HelloReply) {}
    rpc SayHelloMulti (HelloRequest) returns (stream HelloReply) {}
}

message PingReq {}
message PingRes {}
message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}